--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "@types/react-router-dom": "^4.0.4",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5"
   },
